<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFF3CF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/principle_amount"
        android:layout_width="300dp"
        android:layout_height="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:text="@string/principle_amount"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/interest_rate"
        android:layout_width="300dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/interest_rate"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_principle" />

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frequency"
        app:layout_constraintVertical_bias="0.102" />

    <EditText
        android:id="@+id/enter_rate"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/enter_interest_rate"
        android:inputType="numberDecimal"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/interest_rate" />

    <EditText
        android:id="@+id/enter_year"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/enter_year"
        android:inputType="numberDecimal"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/period_year" />

    <TextView
        android:id="@+id/frequency"
        android:layout_width="300dp"
        android:layout_height="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/payment_frequency_monthly"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_year" />

    <TextView
        android:id="@+id/period_year"
        android:layout_width="300dp"
        android:layout_height="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/amortization_period_year"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_rate" />

    <EditText
        android:id="@+id/enter_principle"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/enter_principle"
        android:inputType="numberDecimal"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/principle_amount" />

    <!--    <TextView-->
    <!--        android:id="@+id/textView"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginBottom="144dp"-->
    <!--        android:text="@string/result"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.7"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/button_calculate"-->
    <!--        app:layout_constraintVertical_bias="0.52" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/result"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="53dp"-->
    <!--        android:layout_marginStart="116dp"-->
    <!--        android:layout_marginBottom="152dp"-->
    <!--        android:text="@string/EMI"-->
    <!--        android:textAlignment="center"-->
    <!--        android:textColor="@color/black"-->
    <!--        android:textSize="32sp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/button_calculate"-->
    <!--        tools:ignore="OnClick" />-->


</androidx.constraintlayout.widget.ConstraintLayout>